assets/css/style.css
@import url(/assets/css/reset.css);
@import url(/assets/css/base.css);

/* 
==============================
  HEADER
==============================
*/
/* Mobile Header Navigation */
.header__nav-mobile {
  background-color: var(--cyprus);
  color: var(--white);
  height: 64px;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
}

.header__nav-mobile--container {
  height: 100%;
  padding-inline: var(--padding-base);
  display: flex;
  align-items: center;
}

.header__nav-mobile--logo-container {
  height: 30px;
}

.header__nav-mobile--logo-link {
  height: 30px;
}

.header__nav-mobile--logo {
  height: 100%;
  width: auto;
}

.header__nav-mobile--buttons {
  max-width: 100%;
  flex: 1 1 auto;
  color: var(--white);
}

.header__nav-mobile--buttons ul {
  color: var(--light-grey);
  display: flex;
  justify-content: end;
  column-gap: var(--column-gap);
}

.header__nav-mobile--buttons ul li a {
  height: 100%;
  padding-block: 6px;
  display: flex;
  align-items: center;
  gap: 12px;
  transition: var(--transition);
}

.header__nav-mobile--buttons ul li a span {
  font-size: var(--font-size-small);
  font-weight: var(--font-weight-bold);
  letter-spacing: var(--letter-spacing);
}

.header__nav-mobile--buttons ul li a:hover {
  color: var(--white);
}

.header__nav-mobile--buttons ul li:hover a {
  transform: translateY(-4px);
}
/* End Mobile Header Navigation */

/* Mobile Header Menu */
.header__nav-mobile--menu {
  width: 100%;
  min-height: 100vh;
  position: fixed;
  right: 0;
  top: 0;
  bottom: 0;
  color: var(--white);
  background-color: var(--cyprus);
  will-change: transform;
  transform: translateX(100%);
  transition: transform var(--transition);
  overflow-y: scroll;
  z-index: var(--z-mobile-menu);
}

.header__nav-mobile--menu.active {
  transform: translateX(0);
}

.header__nav-mobile--menu-close {
  padding-inline: var(--padding-base);
  background-color: var(--cyprus-light);
  color: var(--light-grey);
  height: 64px;
  display: flex;
  align-items: center;
  justify-content: end;
  box-shadow: 0 2px 4px -1px rgba(0, 37, 48, 0.72);
}

#mob-menu-close {
  padding-block: 6px;
  height: 100%;
  display: flex;
  align-items: center;
  transition: var(--transition);
}

.mobile-menu-close-btn:hover #mob-menu-close {
  color: var(--white);
  transform: translateY(-4px);
}

.header__nav-mobile--menu-content {
  padding-inline: calc(var(--padding-base) * 2);
  margin-block: calc(var(--padding-base) * 3);
}

.mobile__navigation-block--top ul,
.mobile__navigation-block--bottom ul {
  display: inline-block;
}

.mobile__navigation-block--top ul li,
.mobile__navigation-block--bottom ul li {
  width: fit-content;
}

.mobile__navigation-block--top button {
  color: var(--medium-grey);
  font-size: var(--font-size-medium);
  font-weight: var(--font-weight-medium);
  line-height: var(--line-height-medium);
  text-align: start;
  padding-block: var(--padding-small);
  transition: var(--transition);
}

.mobile__navigation-block--top ul li:hover button {
  color: var(--light-grey);
}

.mobile__navigation-separator {
  border-bottom: 1px solid var(--cyprus-separator-lane);
  margin-block: calc(var(--padding-base) * 1.5);
}

.mobile__navigation-block--middle {
  display: flex;
  flex-direction: column;
  gap: 8px;
  font-size: var(--font-size-small);
  font-weight: var(--font-weight-medium);
  color: var(--light-grey);
  letter-spacing: var(--letter-spacing);
}

.mobile__navigation-block--middle li {
  width: fit-content;
}

.mobile__navigation-block--middle a {
  padding-block: calc(var(--padding-small) / 2);
  display: flex;
  align-items: center;
  gap: 12px;
  transition: var(--transition);
}

.mobile__navigation-block--middle li:hover a {
  color: var(--white);
  transform: translateX(6px);
}

.mobile__navigation-block--bottom a {
  padding-block: var(--padding-small);
  color: var(--light-grey);
  font-weight: var(--font-weight-medium-plus);
}

.mobile__navigation-block--bottom ul li:hover a {
  color: var(--white);
}
/* End Mobile Header Menu */

/* 
==============================
  MAIN
==============================
*/
main {
  height: 2000px;
}

/* 
==============================
  FOOTER
==============================
*/

/* 
==============================
  MEDIA QUERIES
==============================
*/
@media (min-width: 640px) {
  :root {
    --padding-inline: 32px;
  }

  .header__nav-mobile--menu {
    width: 50%;
    min-width: 480px;
  }
}

@media (min-width: 1024px) {
  .header__nav-mobile--container,
  .header__nav-mobile--menu-close {
    padding-inline: calc(var(--padding-base) * 2);
  }

  .header__nav-mobile--buttons ul li a span {
    font-size: var(--font-size-default);
  }

  .header__nav-mobile--menu {
    min-width: 720px;
    max-width: 1020px;
  }

  .header__nav-mobile--menu-content {
    padding-inline: calc(var(--padding-base) * 6);
    margin-block: calc(var(--padding-base) * 4.5);
  }

  .mobile__navigation-block--top,
  .mobile__navigation-block--middle,
  .mobile__navigation-block--bottom {
    padding-inline: var(--padding-base);
  }

  .mobile__navigation-separator {
    margin-inline: var(--padding-base);
  }

  .mobile__navigation-block--top button {
    font-size: calc(var(--font-size-default) * 1.4);
    font-weight: var(--font-weight-medium-plus);
    letter-spacing: var(--letter-spacing);
  }

  .mobile__navigation-block--middle {
    font-size: var(--font-size-default);
    font-weight: var(--font-weight-medium-plus);
  }

  .mobile__navigation-block--bottom a {
    font-size: calc(var(--font-size-default) * 1.1);
    letter-spacing: var(--letter-spacing);
  }
}

@media (min-width: 1200px) {
  .header__nav-mobile--menu-content {
    margin-block: calc(var(--padding-base) * 5.25);
  }

  .mobile__navigation-block--top,
  .mobile__navigation-block--middle,
  .mobile__navigation-block--bottom {
    padding-inline: calc(var(--padding-base) * 3.2);
  }

  .mobile__navigation-separator {
    margin-inline: calc(var(--padding-base) * 3.2);
  }

  .mobile__navigation-block--top button {
    line-height: var(--line-height-small);
    font-size: calc(var(--font-size-default) * 1.45);
  }
}

@media (min-width: 1450px) {
  .header__nav-mobile {
    display: none;
  }

  /* PC Header Menu */
  .header__nav-pc--top-collapsible {
    height: 64px;
    background-color: var(--cyprus);
    color: var(--white);
    transition: var(--transition);
  }
  
  .header__nav-pc--main-container {
    height: 64px;
    background-color: var(--cyprus);
    color: var(--white);
    transition: var(--transition);
  }
  
  .sticky {
    width: 100%;
    /* position: fixed; */
    position: sticky;
    top: 0;
    /* left: 0; */
    /* right: 0; */
    transition: var(--transition);
  }
  
  .sticky + .main {
    padding-top: 6px;
  }
  /* End PC Header Menu */
}

